--- a/views/admin/components/userDetail.ejs
+++ b/views/admin/components/userDetail.ejs
@@ -105,8 +105,8 @@
                             <div class="detail border-bottom pb-3">
                                 <strong>Selected Sports in Board Games</strong>
                                 <div class="selected-sports">
-                                    <% if (typeof event_details.selected_sports != undefined && event_details.selected_sports.length > 0) {%>
-                                        <% for (let sport of event_details.selected_sports) {%>
+                                    <% if (typeof event_details['BoardGames']['selected_games'] != undefined && event_details['BoardGames']['selected_games'].length > 0) {%>
+                                        <% for (let sport of event_details['BoardGames']['selected_games']) {%>
                                             <div class="sport-tag"><%=sport%></div>
                                         <% } %>
                                     <% } %>
@@ -120,8 +120,8 @@
                                 <div class="detail border-bottom pb-3">
                                     <strong>Selected Sports in EGaming</strong>
                                     <div class="selected-sports">
-                                        <% if (typeof event_details.selected_sports != undefined && event_details.selected_sports.length > 0) {%>
-                                            <% for (let sport of event_details.selected_sports) {%>
+                                        <% if (typeof event_details['EGaming']['selected_games'] != undefined && event_details['EGaming']['selected_games'].length > 0) {%>
+                                            <% for (let sport of event_details['EGaming']['selected_games']) {%>
                                                 <div class="sport-tag"><%=sport%></div>
                                             <% } %>
                                         <% } %>
