--- a/views/components/sponsor.ejs
+++ b/views/components/sponsor.ejs
@@ -13,6 +13,12 @@
           <div class="carousel-item text-center">
             <img src="img/brand/3.png"  class="" alt="">
           </div>
+          <div class="carousel-item text-center">
+            <img src="img/brand/4.png"  class="" alt="">
+          </div>
+          <div class="carousel-item text-center">
+            <img src="img/brand/5.png"  class="" alt="">
+          </div>
           <!-- End of content replacement -->
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
