--- a/views/components/sponsor.ejs
+++ b/views/components/sponsor.ejs
@@ -19,6 +19,9 @@
           <div class="carousel-item text-center">
             <img src="img/brand/5.png"  class="" alt="">
           </div>
+          <!-- <div class="carousel-item text-center">
+            <img src="img/brand/last.png"  class="" alt="">
+          </div> -->
           <!-- End of content replacement -->
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
