--- a/views/admin/components/usersTable.ejs
+++ b/views/admin/components/usersTable.ejs
@@ -14,9 +14,9 @@
         <div class="row"></div>
 
         <div class="table-responsive">
-            <table class="table table-bordered shadow-sm table-hover table-rounded">
-                <thead class="table-dark">
-                    <tr class="bg-light">
+            <table id="example" class="table table-striped" style="width:100%">
+                <thead >
+                    <tr>
                         <th scope="col" style="width: 4%;">#</th>
                         <th scope="col">Name </th>
                         <th scope="col" style="width: 4%;">S.O IMS</th>
